--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "dotenv": "^8.2.0",
+    "js-cookie": "^2.2.1",
     "next": "9.3.5",
     "next-tinacms-github": "^0.1.0-canary4.1",
     "react": "16.13.1",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^13.13.1",
     "hygen-next-tinacms-github": "https://github.com/dwalkr/hygen-next-tinacms-github",
+    "prettier": "^2.0.5",
     "typescript": "^3.8.3"
   }
 }
